GithubUsers/app/src/main/java/com/example/githubusers/core/domain/errors/Error.kt
package com.example.githubusers.core.domain.errors

open class Error(message: String = "") : Throwable(message = message)





